--- a/.github/workflows/releasePush.yml
+++ b/.github/workflows/releasePush.yml
@@ -3,8 +3,11 @@ on:
   push:
     branches:
       - release
+concurrency:
+  group: release-push
 jobs:
   release:
+    environment: release
     runs-on: ubuntu-24.04
     permissions:
       contents: write # Needed to push tags and create releases
