--- a/packages/pkgJsonVersion/package.json
+++ b/packages/pkgJsonVersion/package.json
@@ -13,6 +13,9 @@
     "lint": "eslint . --ext .js,.cjs,.mjs,.ts,.cts,.mts,.jsx,.tsx --max-warnings 0",
     "test": "vitest run --passWithNoTests"
   },
+  "dependencies": {
+    "@monolease/util": "workspace:*"
+  },
   "devDependencies": {
     "@eslint/js": "9.28.0",
     "@monolease/prettier-config": "workspace:*",
