--- a/.github/workflows/mainPush.yml
+++ b/.github/workflows/mainPush.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           node-version-file: .node-version
           cache: yarn
+          registry-url: https://registry.npmjs.org
 
       - name: Enable corepack
         run: corepack enable
