chore: move registry to yarnrc

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,3 +3,5 @@ defaultSemverRangePrefix: ""
 nodeLinker: node-modules
 
 tsEnableAutoTypes: false
+
+npmPublishRegistry: "https://registry.npmjs.org"
