chore(yarn): set npmAuthToken

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,4 +4,4 @@ nodeLinker: node-modules
 
 tsEnableAutoTypes: false
 
-npmPublishRegistry: "https://registry.npmjs.org"
+npmAuthToken: "${NODE_AUTH_TOKEN}"
