--- a/.github/workflows/mainPush.yml
+++ b/.github/workflows/mainPush.yml
@@ -25,6 +25,8 @@ jobs:
         run: corepack enable
 
       - name: Setup node
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
