--- a/.github/workflows/mainPush.yml
+++ b/.github/workflows/mainPush.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Setup node
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: someInvalidToken
         uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
