ci(mainPush): add npm_token env to install step

--- a/.github/workflows/mainPush.yml
+++ b/.github/workflows/mainPush.yml
@@ -36,6 +36,8 @@ jobs:
         run: corepack enable
 
       - name: Install dependencies
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: yarn --immutable
 
       - name: Build
