ci(mainPush): add fallback for npmAuthToken

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,4 +4,4 @@ nodeLinker: node-modules
 
 tsEnableAutoTypes: false
 
-npmAuthToken: "${NODE_AUTH_TOKEN}"
+npmAuthToken: ${NODE_AUTH_TOKEN-fallback}
