--- a/packages/github/package.json
+++ b/packages/github/package.json
@@ -1,5 +1,10 @@
 {
   "name": "@monolease/github",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/monolease/monolease.git",
+    "directory": "packages/github"
+  },
   "type": "module",
   "exports": "./dist/index.js",
   "files": [
