--- a/.github/workflows/releasePush.yml
+++ b/.github/workflows/releasePush.yml
@@ -42,4 +42,5 @@ jobs:
         env:
           GH_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO_OWNER_AND_NAME: ${{ github.repository }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: yarn release
