--- a/.github/workflows/releasePush.yml
+++ b/.github/workflows/releasePush.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-24.04
     permissions:
       contents: write # Needed to push tags and create releases
+      id-token: write # Needed for npm publish provenance
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
