--- a/.github/workflows/releasePush.yml
+++ b/.github/workflows/releasePush.yml
@@ -44,4 +44,5 @@ jobs:
           GH_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO_OWNER_AND_NAME: ${{ github.repository }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_CONFIG_PROVENANCE: true
         run: yarn release
