--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
 # macOS
 .DS_Store
 
-# Yarn berry
+# Pnpm
 node_modules
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
 
 # Turborepo
 .turbo
-
-# TS outdir
-dist
