--- a/packages/changelog/tsconfig.json
+++ b/packages/changelog/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "@monolease/tsconfig",
+  "extends": "@monholm/tsconfig",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "module": "nodenext"
   },
   "include": ["src/**/*"],
   "exclude": ["src/**/*.test.ts"]
