--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@monolease/util": "workspace:*",
     "semver": "7.7.2",
-    "tinyglobby": "0.2.14"
+    "tinyglobby": "0.2.14",
+    "yaml": "2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "9.28.0",
